== Released [attachment:wiki:SoftwareReleases:eLife-1.6b29.zip V1.6b29]   ==

''' General '''

Added error messages if two devices with the same key are added to a model.

Tuned cache error message to display calling method trace, if no display_name is provided. Resovles [ticket:592]

''' CBUS '''

Ensure state is correctly cleared dring startup, to ensure correct MMI processing. Resolves [ticket:591]

Ensure CBUS properly attends to decimal strings in the config file.

Ensure DLT devices can send and receive levels.  Resolves [ticket:14]

''' Jython Scripts '''

Ensure messages created in scripts are sent to both other flash clients and to physical devices. Resolves [ticket:589]

Allow access to the cache for scripts  elife.getCache().

Allow access to the command that caused a script to fire within the script  
 *  triggeringEvent.getCommandCode() 
 * triggeringEvent.getExtraValue()
  * triggeringEvent.getExtra2Value()  etc.

Refactored message creation methods to use a single method rather than repeating the content 6 times (Jeff what were you thinking :-)  )

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b28.zip V1.6b28]   ==

''' HAL '''

Changed polling to hopefully resolve all null pointers in HAL

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b27.zip V1.6b27]   ==

''' HAL '''

Fixed null pointer in HAL

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b26.zip V1.6b26]   ==

''' HAL '''

Fixed null pointer if poll occurs before scan is complete from HAL. Resolves [ticket:587]

''' Security '''

Changed too many clients message to indicate contacting the integrator if the problem persists. Resolves [ticket:586]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b25.zip V1.6b25]   ==

''' Comms '''

Removed synchronization which may have been hanging startup. Thread not owner exception may return as a result.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b24.zip V1.6b24]   ==

''' Cbus '''
