@@ -44,7 +44,7 @@
         <DEVICE ACTIVE="N" DEVICE_TYPE="TUTONDO" DESCRIPTION="Tutondo Audio">
                 <CONNECTION>
                         <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" SUPPORTS_CD="N" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="RTSCTS"/>
-                        <IP ACTIVE="Y" IP_ADDRESS="127.0.0.1" PORT="5001"/>
+                        <IP ACTIVE="Y" IP_ADDRESS="127.0.0.1" PORT="5003"/>
                         <IP ACTIVE="N" IP_ADDRESS="192.168.1.70" PORT="4999"/>
                 </CONNECTION>
                 <CATALOGUE NAME="Tutondo Inputs">
@@ -67,7 +67,7 @@
                         <ITEM NAME="PROTOCOL" VALUE="B" />
                 </PARAMETERS>
                 <TUTONDO>
-                        <AUDIO_OUTPUT KEY="1" DISPLAY_NAME="LOUNGE_AUDIO"/>
+                        <AUDIO_OUTPUT KEY="2" DISPLAY_NAME="KITCHEN_AV"/>
                         <AUDIO_OUTPUT ACTIVE="N" KEY="2" DISPLAY_NAME="BBQ_AUDIO"/>
                 </TUTONDO>
         </DEVICE>
@@ -76,8 +76,8 @@
         <!-- ______________________________________  KRAMER DEFS  ____________________  -->
         <DEVICE ACTIVE="N" DEVICE_TYPE="KRAMER" DESCRIPTION="Kramer Matrix">
                 <CONNECTION>
-                        <SERIAL ACTIVE="Y" PORT="/dev/tty.USB Serial" SUPPORTS_CD="N" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="RTSCTS"/>
-                        <IP ACTIVE="N" IP_ADDRESS="127.0.0.1" PORT="5001"/>
+                        <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" SUPPORTS_CD="N" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="RTSCTS"/>
+                        <IP ACTIVE="Y" IP_ADDRESS="127.0.0.1" PORT="5007"/>
                         <IP ACTIVE="N" IP_ADDRESS="192.168.1.70" PORT="4999"/>
                 </CONNECTION>
                 <CATALOGUE NAME="Kramer Audio Inputs">
@@ -97,7 +97,7 @@
                 <KRAMER>
                 
                         <AV_OUTPUT KEY="0" DISPLAY_NAME="ALL"/>
-                        <AV_OUTPUT KEY="1" DISPLAY_NAME="FAMILY_AV"/>
+                        <AV_OUTPUT KEY="1" DISPLAY_NAME="MASTER_BED_AUDIO"/>
                         <AV_OUTPUT KEY="2" DISPLAY_NAME="KITCHEN_AV"/>
                         <AV_OUTPUT KEY="3" DISPLAY_NAME="STUDY_AV"/>
                 </KRAMER>
@@ -195,13 +195,15 @@
                         <LIGHT_CBUS ACTIVE="N" KEY="0D" NAME="Ensuite Light" DISPLAY_NAME="ENSUITE_LIGHT" RELAY="Y" POWER_RATING="100"/>
                         <LIGHT_CBUS ACTIVE="N" KEY="0E" NAME="Ensuite LV Light" DISPLAY_NAME="ENSUITE_LV_LIGHT" RELAY="N" POWER_RATING="100"/>
                         <LIGHT_CBUS ACTIVE="N" KEY="10" NAME="Lounge LV Lights" DISPLAY_NAME="LOUNGE_LV_LIGHT" RELAY="N" POWER_RATING="80"/>
-                        <LIGHT_CBUS ACTIVE="Y" KEY="12" NAME="Dining Room Lights" DISPLAY_NAME="DINING_LIGHT" POWER_RATING="100"/>
+                        <LABEL ACTIVE="Y" KEY="12" NAME="Dining Room Lights" DISPLAY_NAME="DINING_LIGHT" POWER_RATING="100"/>
                         <LIGHT_CBUS ACTIVE="Y" KEY="11" NAME="Garage Light" DISPLAY_NAME="GARAGE_LIGHT" RELAY="Y" POWER_RATING="80"/>
                         <LIGHT_CBUS ACTIVE="N" KEY="0F" NAME="Family Light" DISPLAY_NAME="FAMILY_LIGHT" POWER_RATING="80"/>
                         <LIGHT_CBUS ACTIVE="N" KEY="08" NAME="Hall Light" DISPLAY_NAME="HALL_LIGHT" POWER_RATING="80"/>
-                        <LIGHT_CBUS ACTIVE="N" KEY="09" RELAY="Y" NAME="Bath 1 Light" DISPLAY_NAME="BATH1_LIGHT" POWER_RATING="80"/>
                         <LIGHT_CBUS ACTIVE="N" KEY="1E" NAME="Tessa Light" DISPLAY_NAME="TESSA_LIGHT" POWER_RATING="100"/>
                         <LIGHT_CBUS ACTIVE="N" RELAY="Y" KEY="1E" NAME="Lounge LV Lights" DISPLAY_NAME="LOUNGE_LV_LIGHT" POWER_RATING="80"/>
+ 
+ 						<LIGHT_CBUS KEY="09" ACTIVE="Y" RELAY="N" NAME="Kitchen light" DISPLAY_NAME="KITCHEN_LIGHT" />
+ 						<LIGHT_CBUS KEY="0A" ACTIVE="Y" RELAY="Y" NAME="Pool Cleaner Pump" DISPLAY_NAME="POOL_CLEANER_PUMP" />
                         
                         <LIGHT_CBUS ACTIVE="N" KEY="3C" NAME="Family Light" RELAY="Y"  DISPLAY_NAME="FAMILY_LIGHT" POWER_RATING="100"/>
                         <LIGHT_CBUS ACTIVE="N" KEY="3B" NAME="Pool Light" DISPLAY_NAME="POOL_LIGHT" POWER_RATING="100"/>
@@ -507,7 +509,7 @@
         </DEVICE>	
   
         <!-- _____________________________ GC-100 DEFS _____________________________-->
-        <DEVICE ACTIVE="N" DEVICE_TYPE="GC100" DESCRIPTION="GC100">
+        <DEVICE ACTIVE="Y" DEVICE_TYPE="GC100" DESCRIPTION="GC100">
                 <CONNECTION>
                         <IP ACTIVE="Y" IP_ADDRESS="192.168.1.70" PORT="4998"/>
                         <IP ACTIVE="N" IP_ADDRESS="127.0.0.1" PORT="5005"/>
